# actix-rest-api

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  db.sql  docker-compose.prod.yml  docker-compose.yml  mysql-prod.cnf
migrations/: 01_create_users_table.sql
scripts/: wait-for-db.sh
src/: main.rs
src/config/: database.rs
src/db/: user_db.rs
src/dto/: user_dto.rs
src/errors/: mod.rs
src/handlers/: health.rs  user.rs
src/models/: user.rs
src/routes/: mod.rs
src/services/: user_service.rs
